--- a/package.json
+++ b/package.json
@@ -13,9 +13,18 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "parcel public/index.html",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:dev": "cross-env REACT_APP_ENV=dev NODE_ENV=development react-scripts build",
+    "build:pro": "cross-env REACT_APP_ENV=pro NODE_ENV=production react-scripts build",
+    "build:test": "cross-env REACT_APP_ENV=test NODE_ENV=test react-scripts build",
+    "start:dev": "cross-env REACT_APP_ENV=dev NODE_ENV=development react-scripts start",
+    "start:pro": "cross-env REACT_APP_ENV=pro NODE_ENV=production react-scripts start",
+    "start:test": "cross-env REACT_APP_ENV=test NODE_ENV=test react-scripts start",
+    "parcel:dev": "cross-env REACT_APP_ENV=test NODE_ENV=development parcel public/index.html",
+    "parcel:pro": "cross-env REACT_APP_ENV=pro NODE_ENV=production parcel public/index.html",
+    "parcel:test": "cross-env REACT_APP_ENV=test NODE_ENV=test parcel public/index.html"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "parcel": "^2.7.0"
   }
 }
