--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,12 +13,15 @@ jobs:
         uses: actions/checkout@v2
       - name: Get the production environment.env file
         if: ${{ github.ref_name == 'master' }}
-        run: 
+        run: |
+          cat > .env.production <<EOF
+          ${{ secrets.ENV_PRODUCTION }}
+          EOF
       - name: Deploy to Vercel Action(Production Environment)
         if: ${{ github.ref_name == 'master' }}
         uses: BetaHuhn/deploy-to-vercel-action@v1
         with:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: "#"
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
@@ -29,18 +32,18 @@ jobs:
         if: ${{ github.ref_name == 'dev' }}
         uses: BetaHuhn/deploy-to-vercel-action@v1
         with:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: "#"
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-          GITHUB_DEPLOYMENT: no
+          GITHUB_DEPLOYMENT: false
           BUILD_ENV: |
             NODE_ENV="test"
       - name: Deploy to Vercel Action(Development environment)
         if: ${{ github.ref_name != 'master' && github.ref_name != 'dev' }}
         uses: BetaHuhn/deploy-to-vercel-action@v1
         with:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: "#"
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
