--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -13,7 +14,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "parcel public/index.html",
+    "parcel": "rm -rf dist/  && parcel build public/index.html",
+    "parcel:build:dev": "cross-env REACT_APP_ENV=dev NODE_ENV=development parcel build public/index.html --dist-dir dist",
+    "parcel:build:pro": "cross-env REACT_APP_ENV=pro NODE_ENV=production parcel build public/index.html",
+    "parcel:build:test": "cross-env REACT_APP_ENV=test NODE_ENV=test parcel build public/index.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build:dev": "cross-env REACT_APP_ENV=dev NODE_ENV=development react-scripts build",
