--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,19 +6,20 @@ jobs:
       VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
       VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-    if: ${{ env.VERCEL_TOKEN && env.VERCEL_ORG_ID && env.VERCEL_PROJECT_ID }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        if: ${{ env.VERCEL_TOKEN && env.VERCEL_ORG_ID && env.VERCEL_PROJECT_ID }}
+
       - name: Get the production environment.env file
-        if: ${{ github.ref_name == 'master' }}
+        if: ${{ env.VERCEL_TOKEN && env.VERCEL_ORG_ID && env.VERCEL_PROJECT_ID && github.ref_name == 'master' }}
         run: |
           cat > .env.production <<EOF
           ${{ secrets.ENV_PRODUCTION }}
           EOF
       - name: Deploy to Vercel Action(Production Environment)
-        if: ${{ github.ref_name == 'master' }}
+        if: ${{ env.VERCEL_TOKEN && env.VERCEL_ORG_ID && env.VERCEL_PROJECT_ID && github.ref_name == 'master' }}
         uses: BetaHuhn/deploy-to-vercel-action@v1
         with:
           GITHUB_TOKEN: "#"
@@ -30,7 +31,7 @@ jobs:
           BUILD_ENV: |
             NODE_ENV="production"
       - name: Deploy to Vercel Action(Test Environment)
-        if: ${{ github.ref_name == 'dev' }}
+        if: ${{ env.VERCEL_TOKEN && env.VERCEL_ORG_ID && env.VERCEL_PROJECT_ID && github.ref_name == 'dev' }}
         uses: BetaHuhn/deploy-to-vercel-action@v1
         with:
           GITHUB_TOKEN: "#"
@@ -42,7 +43,7 @@ jobs:
           BUILD_ENV: |
             NODE_ENV="test"
       - name: Deploy to Vercel Action(Development environment)
-        if: ${{ github.ref_name != 'master' && github.ref_name != 'dev' }}
+        if: ${{ env.VERCEL_TOKEN && env.VERCEL_ORG_ID && env.VERCEL_PROJECT_ID && (github.ref_name != 'master' && github.ref_name != 'dev') }}
         uses: BetaHuhn/deploy-to-vercel-action@v1
         with:
           GITHUB_TOKEN: "#"
