--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "parcel": "rm -rf dist/  && parcel build public/index.html",
+    "pack": "rm -rf dist/  && parcel build public/index.html",
     "parcel:build:dev": "cross-env REACT_APP_ENV=dev NODE_ENV=development parcel build public/index.html --dist-dir dist",
     "parcel:build:pro": "cross-env REACT_APP_ENV=pro NODE_ENV=production parcel build public/index.html",
     "parcel:build:test": "cross-env REACT_APP_ENV=test NODE_ENV=test parcel build public/index.html",
