--- a/package.json
+++ b/package.json
@@ -3,29 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "process": "^0.11.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-dom": "^18.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
     "pack": "rm -rf dist/  && parcel build public/index.html",
-    "parcel:build:dev": "cross-env REACT_APP_ENV=dev NODE_ENV=development parcel build public/index.html --dist-dir dist",
+    "parcel:build:dev": "cross-env REACT_APP_ENV=dev NODE_ENV=development parcel build public/index.html",
     "parcel:build:pro": "cross-env REACT_APP_ENV=pro NODE_ENV=production parcel build public/index.html",
     "parcel:build:test": "cross-env REACT_APP_ENV=test NODE_ENV=test parcel build public/index.html",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:dev": "cross-env REACT_APP_ENV=dev NODE_ENV=development react-scripts build",
-    "build:pro": "cross-env REACT_APP_ENV=pro NODE_ENV=production react-scripts build",
-    "build:test": "cross-env REACT_APP_ENV=test NODE_ENV=test react-scripts build",
-    "start:dev": "cross-env REACT_APP_ENV=dev NODE_ENV=development react-scripts start",
-    "start:pro": "cross-env REACT_APP_ENV=pro NODE_ENV=production react-scripts start",
-    "start:test": "cross-env REACT_APP_ENV=test NODE_ENV=test react-scripts start",
     "parcel:dev": "cross-env REACT_APP_ENV=test NODE_ENV=development parcel public/index.html",
     "parcel:pro": "cross-env REACT_APP_ENV=pro NODE_ENV=production parcel public/index.html",
     "parcel:test": "cross-env REACT_APP_ENV=test NODE_ENV=test parcel public/index.html"
