--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,8 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check secrets
-        if: ${{ !env.VERCEL_TOKEN || !env.VERCEL_ORG_ID || !env.VERCEL_PROJECT_ID }}
+        if: ${{ !env.VERCEL_TOKEN || !env.VERCEL_ORG_ID || !env.VERCEL_PROJECT_ID || (github.ref_name == 'master' && !env.ENV_PRODUCTION )}}
         run: |
+          if (!env.VERCEL_TOKEN); then echo "secrets.VERCEL_TOKEN does not set the value"; fi;
+          if (!env.VERCEL_ORG_ID); then echo "secrets.VERCEL_ORG_ID does not set the value"; fi;
+          if (!env.VERCEL_PROJECT_ID); then echo "secrets.VERCEL_PROJECT_ID does not set the value"; fi;
+          if (!env.ENV_PRODUCTION); then echo "secrets.ENV_PRODUCTION does not set the value"; fi;
           exit 1
 
       - name: Checkout
@@ -36,7 +40,7 @@ jobs:
           GITHUB_DEPLOYMENT: false
           BUILD_ENV: |
             NODE_ENV=production 
-            REACT_APP_ENV=pro 
+            REACT_APP_ENV=pro
 
       - name: Deploy to Vercel Action(Test Environment)
         if: ${{ github.ref_name == 'dev' }}
@@ -50,7 +54,7 @@ jobs:
           GITHUB_DEPLOYMENT: false
           BUILD_ENV: |
             NODE_ENV=test 
-            REACT_APP_ENV=test 
+            REACT_APP_ENV=test
 
       - name: Deploy to Vercel Action(Development environment)
         if: ${{ github.ref_name != 'master' && github.ref_name != 'dev' }}
@@ -64,4 +68,4 @@ jobs:
           GITHUB_DEPLOYMENT: false
           BUILD_ENV: |
             NODE_ENV=development 
-            REACT_APP_ENV=dev 
+            REACT_APP_ENV=dev
